# nodl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  plan_cpp_tests.md
.github/workflows/: docs.yml  pre-commit.yml  rosdoc2.yml  test.yml
ament_nodl/: CMakeLists.txt  ament_nodl-extras.cmake.in  package.xml  rosdoc2.yaml
ament_nodl/cmake/: ament_nodl_register.cmake  ament_nodl_register_document.cmake  ament_nodl_register_fragment.cmake  ament_nodl_register_node.cmake
ament_nodl/doc/: conf.py  overview.md
design/: composition.md  package_docs.md  package_docs_proposal.md
nodl/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nodl/doc/: .gitignore  composition.md  concepts.md  conf.py  index.md  package_docs.py  pyproject.toml  roadmap.md  schema.md  schema_reference.py
nodl/doc/_static/: custom.css
nodl/doc/static/: custom.css
nodl/nodl/: __init__.py  conversion.py  describe.py  models.py  resolve.py  schema.py
nodl/nodl/resources/: nodl.schema.yaml
nodl/nodl/resources/fragments/: lifecycle_node.nodl.yaml  node.nodl.yaml
nodl/test/: test_conversion.py  test_describe_integration.py  test_resolve.py  test_schema.py
nodl_docgen/: CMakeLists.txt  nodl_docgen-extras.cmake.in  package.xml
nodl_docgen/cmake/: nodl_docgen.cmake
nodl_docgen/nodl_docgen/: __init__.py  _generator.py  sphinx_ext.py
nodl_docgen/scripts/: nodl_docgen
nodl_docgen/test/: test_cli.py  test_generator.py  test_sphinx_ext.py
nodl_generator_cpp/: CMakeLists.txt  nodl_generator_cpp-extras.cmake.in  package.xml
nodl_generator_cpp/cmake/: nodl_generate_cpp.cmake
nodl_generator_cpp/scripts/: nodl_generate_cpp
nodl_generator_cpp/templates/: node.cpp.jinja2  node.hpp.jinja2
nodl_generator_cpp/test/: test_generator.py
nodl_generator_rust/: CMakeLists.txt  nodl_generator_rust-extras.cmake.in  package.xml
nodl_generator_rust/cmake/: nodl_generate_rust.cmake
nodl_generator_rust/nodl_generator_rust/: generator.py
nodl_generator_rust/nodl_generator_rust/templates/: node_nodl.rs.jinja2
nodl_generator_rust/scripts/: nodl_generate_rust
nodl_generator_rust/test/: test_generator.py
nodl_observe/: README.md  package.xml  setup.cfg  setup.py
nodl_observe/nodl_observe/: __init__.py  _endpoints.py  _observe.py  _parameters.py  _qos.py  serialization.py
nodl_observe/test/: smoke_live.py  test_observe.py  test_observe_integration.py  test_rendering.py  test_serialization.py
nodl_observe/test/expected/_base/: s2_node.yaml  s3_node_a.yaml  s3_node_b.yaml
nodl_observe/test/expected/jazzy/: s1_node.json  s1_node.yaml  s2_node.json  s3_node_a.json  s3_node_b.json  s3_node_b.yaml
nodl_observe/test/expected/jazzy/rmw_cyclonedds_cpp/: s1_node.yaml
nodl_observe/test/expected/jazzy/rmw_fastrtps_cpp/: s2_node.yaml  s3_node_a.yaml
nodl_observe/test/expected/rmw_cyclonedds_cpp/: s2_node.yaml
nodl_rclpy/: package.xml  setup.cfg  setup.py
nodl_rclpy/nodl_rclpy/: __init__.py  _setup.py  _support.py  lifecycle_node.py  node.py  params.py
nodl_rclpy/test/: test_lifecycle_node.py  test_node.py  test_params.py  test_support.py
nodl_rclrs/: CMakeLists.txt  Cargo.toml  package.xml
nodl_rclrs/src/: lib.rs  qos.rs
nodl_schema/: package.xml  rosdoc2.yaml  setup.cfg  setup.py
nodl_schema/doc/: conf.py  overview.md
nodl_schema/nodl_schema/: __init__.py  __main__.py  composition.py  models.py  resolve.py  validator.py
nodl_schema/nodl_schema/schemas/: interface.schema.yaml  node.schema.yaml  nodl.schema.yaml  parameter.schema.yaml
nodl_schema/nodl_schema/schemas/bases/: lifecycle_node.nodl.yaml  node.nodl.yaml
nodl_schema/nodl_schema/schemas/fragments/: lifecycle_node.nodl.yaml
nodl_schema/schemas/: nodl.schema.yaml  parameter.schema.yaml
nodl_schema/test/: test_resolve.py  test_schema.py  test_validator_cli.py
nodl_test/: CMakeLists.txt  nodl_test-extras.cmake.in  package.xml
nodl_test/cmake/: nodl_add_test.cmake
nodl_test/nodl_test/: __init__.py  _compare.py  _conformance.py
nodl_test/test/: test_compare.py
ros2nodl/: package.xml  rosdoc2.yaml  setup.py
ros2nodl/doc/: conf.py  index.md  overview.md
ros2nodl/ros2nodl/: __init__.py
ros2nodl/ros2nodl/command/: __init__.py  nodl.py
ros2nodl/ros2nodl/verb/: __init__.py  describe.py  validate.py
ros2nodl/test/: test_describe_verb.py  test_verbs.py
test_ament_nodl/: CMakeLists.txt  package.xml
test_ament_nodl/test/: test_macro_rejection.py  test_register_document.py  test_register_fragment.py  test_register_interface.py  test_register_node.py
test_ament_nodl/test/fixtures/: alt_pkg_node.nodl.yaml  basic_node.nodl.yaml  extra_telemetry.nodl.yaml  json_node.nodl.json  tf_listener.nodl.yaml
test_nodl_generator_cpp/: CMakeLists.txt  package.xml
test_nodl_generator_cpp/derived/: lifecycle_pubsub_node_derived.cpp  lifecycle_pubsub_node_derived.hpp  params_node_derived.hpp  pubsub_node_derived.cpp  pubsub_node_derived.hpp  service_node_derived.cpp  service_node_derived.hpp
test_nodl_generator_cpp/fixtures/: lifecycle_pubsub_node.nodl.yaml  params_node.nodl.yaml  pubsub_node.nodl.yaml  service_node.nodl.yaml
test_nodl_generator_cpp/nodl/: test_node.nodl.yaml
test_nodl_generator_cpp/test/: test_generated_node.cpp  test_lifecycle_pubsub.cpp  test_params.cpp  test_pubsub.cpp  test_service.cpp
tools/: generate_models.py
