<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_nodl</name>
  <version>0.1.0</version>
  <description>CMake macros for registering NoDL documents with the ament index.</description>
  <maintainer email="rosgraph-wg@googlegroups.com">ROSGraph Working Group</maintainer>
  <license>Apache-2.0</license>
  <author email="hello@alistairenglish.com">Alistair English</author>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
