<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl</name>
  <version>0.1.0</version>
  <description>NoDL - Node Description Language. Schema and library for declaring ROS 2 node interfaces.</description>
  <maintainer email="emerson@polymathrobotics.com">Emerson Knapp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-yaml</depend>
  <depend>python3-jsonschema</depend>
  <depend>python3-pydantic</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
