<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl</name>
  <version>0.0.0</version>
  <description>Node Definition Language (NoDL) metapackage.</description>
  <maintainer email="hello@alistairenglish.com">Alistair English</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nodl_schema</exec_depend>

  <export>
    <metapackage/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
