<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl</name>
  <version>0.0.0</version>
  <description>ROS 2 Node Definition Language (NoDL) metapackage.</description>
  <maintainer email="rosgraphwg@googlegroups.com">ROSGraph Working Group</maintainer>
  <license>Apache-2.0</license>
  <author email="hello@alistairenglish.com">Alistair English</author>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nodl_schema</exec_depend>
  <exec_depend>ros2nodl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
