<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl_observe</name>
  <version>0.0.0</version>
  <description>Observe a running ROS node and produce its runtime description as a rosgraph_msgs/Node message.</description>
  <maintainer email="rosgraph-wg@googlegroups.com">ROSGraph Working Group</maintainer>
  <license>Apache-2.0</license>
  <author email="hello@alistairenglish.com">Alistair English</author>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosidl_runtime_py</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
