<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl_schema</name>
  <version>0.0.0</version>
  <description>ROS 2 Node Definition Language (NoDL) schema and validation.</description>
  <maintainer email="rosgraphwg@googlegroups.com">ROSGraph Working Group</maintainer>
  <license>Apache-2.0</license>
  <author email="hello@alistairenglish.com">Alistair English</author>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <depend>python3-jsonschema</depend>
  <depend>python3-pydantic</depend>
  <depend>python3-yaml</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
