<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl_test</name>
  <version>0.1.0</version>
  <description>
    Test fixtures for verifying that a running node's interfaces match its NoDL specification.
    Provides a cmake macro and a pytest factory for launch-based conformance tests.
  </description>
  <maintainer email="emerson@polymathrobotics.com">Emerson Knapp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>nodl</depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>
  <depend>python3-pytest</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
