<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2nodl</name>
  <version>0.0.0</version>
  <description>ros2cli command entrypoint for NoDL.</description>
  <maintainer email="rosgraph-wg@googlegroups.com">ROSGraph Working Group</maintainer>
  <license>Apache-2.0</license>
  <author email="hello@alistairenglish.com">Alistair English</author>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <depend>nodl_observe</depend>
  <depend>nodl_schema</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ros2cli</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
